--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html>
     <head>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-        <embed src="christmas-song.mp3" autostart="true" loop="true">
+        <embed src="christmas-song.mp3" autostart="true" loop="true" hidden="true"/>
         <title>Wish You a Happy Christmas</title>
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
