small edits in Readme

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
         <embed src="christmas-song.mp3" autostart="true" loop="true" hidden="true"/>
         <title>Wish You a Happy Christmas</title>
         <link rel="stylesheet" href="css/style.css" type="text/css">
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-	    <script src="js/snowfall.js"></script>
+       	<script src="js/jquery.min.js"></script>
+	<script src="js/snowfall.js"></script>
 <script>
 $(document).ready(function() {
     snowFall.snow($("section"), {
