--- a/public/home.html
+++ b/public/home.html
@@ -1,43 +1,60 @@
 <!DOCTYPE html>
-<html>
-    <head>
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-        <embed src="christmas-song.mp3" autostart="true" loop="true" hidden="true"/>
-        <title>Wish You a Happy Christmas</title>
-        <link rel="stylesheet" href="css/style.css" type="text/css">
-       	<script src="js/jquery.min.js"></script>
-	    <script src="js/snowfall.js"></script>
-<script>
-$(document).ready(function() {
-    snowFall.snow($("section"), {
-        minSize: 1,
-        maxSize: 10,
-        round: true,
-        minSpeed: 1,
-        maxSpeed: 3,
-        flakeCount: 120
-    });
-});
-</script>
-    </head>
-    <body>
-    
-    <!-- Add your heading below this line -->
-    <section>
-      <h1>Wish you a very Happy Christmas!</h1>
-      <h2>From Rohan ..</h2>
-    </section>
-    <div class="container">
+<html lang="en" class="no-js">
+	<head>
+		<embed src="christmas-song.mp3" autostart="true" loop="true" hidden="true"/>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+		<meta name="viewport" content="width=device-width, initial-scale=1"> 
+		<title> Happy Christmas</title>
+        <link href='http://fonts.googleapis.com/css?family=Raleway:200,400,600' rel='stylesheet' type='text/css'>
+		<!--<link rel="stylesheet" type="text/css" href="css/font.css" />-->
+		<link rel="stylesheet" type="text/css" href="css/demo.css" />
+		<link rel="stylesheet" type="text/css" href="css/component.css" />
+		<script src="js/modernizr.custom.js"></script>
+		<script src="js/jquery.min.js"></script>
+		<script src="js/snowfall.js"></script>
 
-        <div id="boxgallery" class="boxgallery" data-effect="effect-1">
-            <div class="panel"><img src="img/1.jpg" alt="Image 1"/></div>
-            <div class="panel"><img src="img/2.jpg" alt="Image 2"/></div>
-            <div class="panel"><img src="img/3.jpg" alt="Image 3"/></div>
-            <div class="panel"><img src="img/4.jpg" alt="Image 4"/></div>
-        </div>
-
-
-    </div>
-
-    </body>
+		<script> // Script for the snowfall effect
+			$(document).ready(function() {
+				snowFall.snow($("body"), {
+					minSize: 1,
+					maxSize: 10,
+					round: true,
+					minSpeed: 1,
+					maxSpeed: 3,
+					flakeCount: 120
+				});
+			});
+		</script>
+		<script> // Script to auto-play in addition to responding to click event
+			var interval = null;
+			$(function () {
+				interval = setInterval(callFunc, 4000);
+			});
+			function callFunc() {
+				$(".next").trigger('click');
+			}
+		</script>
+	</head>
+	<body>
+		<div class="container">
+			</div>
+			<div id="boxgallery" class="boxgallery" data-effect="effect-1">
+				<div class="panel"><img src="./img/1.jpg" alt="Image 1"/></div>
+				<div class="panel"><img src="./img/2.jpg" alt="Image 2"/></div>
+				<div class="panel"><img src="./img/3.jpg" alt="Image 3"/></div>
+				<div class="panel"><img src="./img/4.jpg" alt="Image 4"/></div>
+				<div class="panel"><img src="./img/5.jpg" alt="Image 5"/></div>
+			</div>
+			<header class="codrops-header">
+				<h1>Wish you a very Happy Christmas!</h1>
+				<h2>From Rohan ..</h2>
+			</header>
+		</div><!-- /container -->
+		<script src="js/classie.js"></script>
+		<script src="js/boxesFx.js"></script>
+		<script>
+			new BoxesFx( document.getElementById( 'boxgallery' ) );
+		</script>
+	</body>
 </html>
